-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v1.27.1 - Apr 2, 2022

 - fix crash on file conversion


fmedia v1.27 - Mar 31, 2022

 + '--edit-tags': Add/Modify file's meta tags in-place
   Supported formats and tags: .mp3(ID3v2+ID3v1)
   Example:
     fmedia --edit-tags --meta='artist=ARTIST;title=TITLE' ./file.mp3

 + '--meta-from-filename=TEMPLATE': Specify template for auto-tagging from input file name
   Example how to set artist, track number and title meta tags from file name:
     fmedia --edit-tags --meta-from-filename='$artist - $tracknumber. $title' './Cool Artist - 04. Best Song.mp3'

 + GUI/Linux: edit .mp3 tags via "File"->"Edit Meta Data"
 + GUI/Linux: "List"->"Scroll To Current"
 * TUI: "delete file": move to Trash by default
   New configuration setting: "tui.file_delete_method"
 - Windows: fix wildcard input
 - fix .mp3 format detection in files without ID3v2 tag
 - MPEG/Layer3: fix audio glitches on seek


fmedia v1.26.1 - Mar 14, 2022

 - fix complex filter chain use-cases such as "--start-dblevel/--stop-dblevel"
    and possibly some other cases
 - GUI/Linux: fix file drop


fmedia v1.26 - Mar 6, 2022

 Includes all changes from v1.25


fmedia v1.25.3beta - Jan 28, 2022

 - "-o @stdout.wav"
 - core: "codepage" config option
 - core: pcm channels conversion
 - .mp3 encode: mono/interleaved source


fmedia v1.25.2beta - Dec 15, 2021

 * GUI(Linux): parallel conversion; display the progress
 *! Rename --out-copy=cmd -> --out-copy-cmd.  A command-line switch with an optional value was a design mistake.


fmedia v1.25.1beta - Nov 27, 2021

 * audio capture: don't delete the recorded file after audio device failure
 * WASAPI playback: switch to new default device after the current device goes offline
 * playlist: don't activate next track after audio device error